# contactsQA

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: mlm.py  mlm_utils.py  qa-pipeline.py  trainer_qa.py
app/metrics/customsquad/: customsquad.py  evaluate_squad.py
app/metrics/customsquadv2/: customsquadv2.py  evaluate_squad_v2.py
data/: create-dataset.py  create_crawl_variants.ipynb  dataset_insights.ipynb  dataset_utils.py  plot_img.ipynb  prediction_insights.ipynb  text_preprocessing.py
data/knowledge/: entities-types.txt  entity_knowledge_extraction.py  entity_knowledge_reverse_extraction.py  type_knowledge_extraction.py  utils.py
